--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
      <section class="page1">
         <h1>Página 1</h1>
+        <h1>Página 1</h1>
      </section>
 
      <section class="page2">
